# detour

./: .clang-format  .cmake-format  .gitmodules  CMakeLists.txt  CMakePresets.json
include/: detour.hpp
src/: detour.cpp
