cmake_minimum_required(VERSION 3.22.1)

if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
    set(PROJECT_IS_TOP_LEVEL true)
endif()

if(PROJECT_IS_TOP_LEVEL)
    if(BUILD_FOR_ANDROID)
        set(ANDROID_NDK $ENV{ANDROID_NDK})
        if(NOT ANDROID_NDK)
            message(FATAL_ERROR "This project requires the Android NDK to compile.")
        endif()
        file(TO_CMAKE_PATH ${ANDROID_NDK} ANDROID_NDK)
        set(CMAKE_TOOLCHAIN_FILE "${ANDROID_NDK}/build/cmake/android.toolchain.cmake")
        set(ANDROID_ABI arm64-v8a CACHE STRING "target build architecture")
        set(ANDROID_PLATFORM 24 CACHE STRING "target android api level")
    endif()

    if(BUILD_FOR_WINDOWS)
        set(VCPKG_ROOT $ENV{VCPKG_ROOT})
        if(VCPKG_ROOT)
            file(TO_CMAKE_PATH ${VCPKG_ROOT} VCPKG_ROOT)
            set(CMAKE_TOOLCHAIN_FILE "${VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake")
        endif()
    endif()
endif()

project(detour)

add_library(detour STATIC src/detour.cpp)
target_include_directories(detour PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
set_target_properties(detour PROPERTIES CXX_STANDARD 11 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO)

if(ANDROID)
    add_subdirectory(external/dobby)
    target_link_libraries(detour PRIVATE dobby_static)
elseif(WIN32)
    add_subdirectory(external/minhook)
    target_link_libraries(detour PRIVATE minhook)
endif()
